Fixed viewport on base.html to fix error with materialize 'select' on mobile devices

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -159,6 +159,7 @@ textarea.materialize-textarea {
 
 .input-field.col .prefix ~ label {
     color: #e85a13;
+    z-index: -3;
 }
 
 
